# SLM-LAB

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
brain/: .gitignore  README.md  pyproject.toml
brain/artifacts/: README.md
brain/data/: README.md
brain/src/slm/: __init__.py  device.py  reproducibility.py
brain/tests/: test_device.py  test_reproducibility.py
cmake/: bootstrap-vcpkg.cmake  new-lesson.cmake
engine/: Makefile  README.md  main.cpp
engine/cmake/templates/: lesson-blank.cpp.in
engine/libs/engine/src/: lesson.cpp  show.cpp
engine/libs/math/: CMakeLists.txt
engine/libs/math/include/slm/math/: vector.hpp
learning/: .gitignore  README.md  SYLLABUS.md  Untitled.ipynb  pyproject.toml
learning/data/: README.md
learning/notebooks/: 00_slm_map.ipynb  01_cpu_gpu_accelerators.ipynb  02_memory_hierarchy_data_movement.ipynb  03_numbers_precision.ipynb  04_parallelism_kernels_sync.ipynb  05_matmul_cache_tiling.ipynb  06_benchmarking_profiling.ipynb  07_model_resource_budget.ipynb  08_systems_profiler_capstone.ipynb  09_tensors.ipynb  10_broadcasting_vectorization.ipynb  11_vectors_geometry.ipynb  12_matrices_linear_maps.ipynb  13_optional_eigen_svd_low_rank.ipynb  14_derivatives_sensitivity.ipynb  15_chain_rule_graphs.ipynb  16_probability_statistics.ipynb  17_likelihood_information.ipynb  18_softmax_cross_entropy.ipynb  19_optimization.ipynb  20_mathematical_capstone.ipynb  21_learning_from_data.ipynb  22_neurons_activations_mlps.ipynb  23_scalar_autograd.ipynb  24_tensor_autograd_gradcheck.ipynb  25_modules_training_loop.ipynb  26_initialization_gradient_flow.ipynb  27_residuals_normalization_regularization.ipynb  28_text_unicode_bytes.ipynb  29_ngram_language_model.ipynb  30_bpe_unigram_vocab.ipynb  31_special_tokens_padding_prompts.ipynb  32_context_windows_attention_masks_packing.ipynb  33_embeddings_positions_rope.ipynb  34_scaled_attention.ipynb  35_causal_multihead_attention.ipynb  36_norms_feedforward_decoder_block.ipynb  37_decoder_stack_lm_head.ipynb  38_transformer_complexity_failures.ipynb  39_tiny_decoder_capstone.ipynb
learning/scripts/: build_notebooks.py  validate_notebooks.py
lessons/linear_layer/: README.md  lesson.cpp
libs/engine/: CMakeLists.txt
libs/engine/include/slm/engine/: controls.hpp  lesson.hpp  show.hpp  viewer.hpp
libs/engine/src/: controls.cpp  viewer.cpp
libs/math/include/slm/math/: matrix.hpp
libs/math/src/: matrix.cpp
