[project]
name = "slm-brain"
version = "0.1.0"
description = "The reusable Python model and training package for SLM."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.5",
    "torch>=2.13",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3",
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "ruff>=0.15",
]

[tool.uv.build-backend]
module-name = "slm"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
pretty = true
show_error_codes = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra --strict-config --strict-markers --cov=slm --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["slm"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
