[project]
name = "ml-learning"
version = "0.1.0"
description = "Independent notebooks for learning machine-learning mathematics."
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.3",
    "jupyterlab>=4.6",
    "matplotlib>=3.11",
    "nbconvert>=7.17",
    "nbformat>=5.10",
    "numpy>=2.5",
    "torch>=2.13",
]

[tool.uv]
package = false
